--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -11,6 +11,8 @@
         <div class="blog-img">
           <a ui-sref="projectsShow({id: project.id})"><img ng-src="{{ project.imageSRC }}" alt="{{ project.name }}"></a>
         </div>
+        <a href="{{ project.github }}" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="{{ project.link }}" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
       </div>
     </li>
   </ul>
