--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,7 +32,7 @@ ul {
     float: none;
     .blog {
       width: 100%;
-      height: 400px;
+      height: 450px;
       padding: 20px;
       box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
       border-style: solid;
@@ -41,6 +41,21 @@ ul {
       h2 {
         margin: auto 0;
         height: 100px;
+      }
+      a {
+        width:5%;
+        margin-left: 5px;
+        color: #000;
+        i {
+          font-size: 40px;
+          margin: 15px;
+          &.fa-file-text-o {
+            font-size: 28px;
+          }
+        }
+        &:hover {
+          color:#b30059;
+        }
       }
       .blog-img {
           width: 200px;
@@ -62,6 +77,10 @@ ul {
             right: -100%;
             top: -100%;
             bottom: -100%;
+        }
+        i {
+          font-size: 50px;
+          margin: 40px 20px 20px 20px;
         }
       }
     }
