--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,13 @@
 // @import 'colorSchemes';
 // @import 'responsive';
 
+img {
+  border-radius: 5px;
+}
+
+div {
+  border-radius: 3px;
+}
 
 .extra-height {
   height: 600px;
@@ -28,6 +35,11 @@
 
 ul {
   list-style: none;
+}
+
+
+h1 {
+  font-size: 60px;
 }
 
 h1, h2 {
