--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,7 +34,7 @@ ul {
       width: 100%;
       height: 450px;
       padding: 20px;
-      box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
+      box-shadow: 0px 0px 42px -3px #b30059;
       border-style: solid;
       border-color: grey;
       border-width: 2px;
@@ -104,16 +104,55 @@ ul {
     margin-top: 20px;
   }
   img {
-    height: 600px;
+    max-height: 600px;
     margin: 20px;
   }
   .markdown-div {
     text-align: left;
     width: 1000px;
     margin: 0 auto;
-    // box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
+    font-family: 'Nunito', sans-serif;
     padding: 10px;
-  }
+    ul {
+      -moz-column-count: 3;
+      -moz-column-gap: 20px;
+      -webkit-column-count: 3;
+      -webkit-column-gap: 20px;
+      column-count: 3;
+      column-gap: 10px;
+      width: 800px;
+      // list-style: initial;
+      padding: 15px;
+      li {
+        width: 100%;
+        font-size: 18px;
+        letter-spacing: 2px;
+      }
+    }
+    p {
+      font: 16px;
+      width: 80%;
+      margin:5px 0;
+      padding:1%;
+      height: 100%;
+      word-break: break-all;
+      hyphens: auto;
+      text-align: left;
+
+      }
+      img {
+        max-width: 500px;
+        height: 100%;
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        border-radius: 10px;
+        border-width: thin;
+        border-style: solid;
+        border-color: grey;
+      }
+    }
+
   textarea {
     width: 500px;
     margin: 10px;
@@ -165,6 +204,23 @@ textarea {
     width: 80%;
     max-height: 100%;
     margin: 0 auto;
+    a {
+      width:5%;
+      margin-left: 5px;
+      color: #000;
+      i {
+        font-size: 40px;
+        margin: 15px;
+        padding-top: 20px;
+
+        &.fa-file-text-o {
+          font-size: 28px;
+        }
+      }
+      &:hover {
+        color:#b30059;
+      }
+    }
     .proj-show-div {
       .markdown-div {
         margin: 5px 0;
