--- a/src/js/views/static/about.html
+++ b/src/js/views/static/about.html
@@ -15,7 +15,8 @@
               <a href="https://github.com/hannahwynnjones" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a href="https://twitter.com/HannahWynnJones" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               <a href="mailto:hello@hannahwynnjones.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-            </div></div>
+            </div>
+          </div>
 
           <div class="right">
             <h1>Hannah wynn jones</h1>
