--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -17,16 +17,16 @@
 <div class="project-div">
   <h2>PROJECTS</h2>
     <p>
-      <a href="https://damp-plateau-60284.herokuapp.com/" target="_blank">GET YOUR OWN BACK!</a>
+      <a href="https://damp-plateau-60284.herokuapp.com/" target="_blank">GET YOUR OWN BACK!</a><a href="https://github.com/hannahwynnjones/projectOne.2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
     </p>
     <p>
-      <a href="https://blooming-falls-61034.herokuapp.com" target="_blank">Rate my Bake</a>
+      <a href="https://blooming-falls-61034.herokuapp.com" target="_blank">Rate my Bake</a><a href="https://github.com/hannahwynnjones/ProjectTwo" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
     </p>
     <p>
-      <a href="https://guarded-refuge-81006.herokuapp.com/" target="_blank">Fabric</a>
+      <a href="https://guarded-refuge-81006.herokuapp.com/" target="_blank">Fabric</a><a href="https://github.com/hannahwynnjones/project-3-forked" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
     </p>
     <p>
-      <a href="https://sleepy-tor-76650.herokuapp.com/" target="_blank">Go Big or Go Home</a>
+      <a href="https://sleepy-tor-76650.herokuapp.com/" target="_blank">Go Big or Go Home</a><a href="https://github.com/hannahwynnjones/project-4-frontend" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
     </p>
     <p class="bl">
       <a ui-sref="blogsIndex">Blog</a>
