--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -94,7 +94,7 @@
   left: 7%;
   position: absolute;
   // background-color: blue;
-  text-align: left;
+  text-align: center;
   color: black;
   padding-left: 15px;
   h2 {
@@ -106,6 +106,7 @@
       color: black;
       text-decoration:none;
       letter-spacing: 2px;
+      margin-left: 10px;
       &:hover {
         color:#b30059;
         text-decoration:none;
