--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,7 +104,7 @@ ul {
     margin-top: 20px;
   }
   img {
-    max-height: 600px;
+    height: 600px;
     margin: 20px;
   }
   .markdown-div {
@@ -112,7 +112,15 @@ ul {
     width: 1000px;
     margin: 0 auto;
     font-family: 'Nunito', sans-serif;
+
+    // box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
     padding: 10px;
+  }
+
+  .markdown-div {
+    margin: 5px 0;
+    padding:3px;
+    font-family: 'Nunito', sans-serif;
     ul {
       -moz-column-count: 3;
       -moz-column-gap: 20px;
@@ -139,17 +147,16 @@ ul {
       hyphens: auto;
       text-align: left;
 
-      }
-      img {
-        max-width: 500px;
-        height: 100%;
-        width: 80%;
-        margin: 0 auto;
-        text-align: center;
-        border-radius: 10px;
-        border-width: thin;
-        border-style: solid;
-        border-color: grey;
+        img {
+          height: 100%;
+          width: 80%;
+          margin: 0 auto;
+          text-align: center;
+          border-radius: 10px;
+          border-width: thin;
+          border-style: solid;
+          border-color: grey;
+        }
       }
     }
 
