--- a/src/js/views/blogs/new.html
+++ b/src/js/views/blogs/new.html
@@ -16,6 +16,11 @@
           <!-- <input class="blog-input" type="text" id="body" name="body" ng-model="blogsNew.blog.body"> -->
         </div>
 
+        <div>
+          <label for="createdAt">Date added</label>
+          <input type="date" id="createdAt" name="createdAt" ng-model="blogsNew.blog.createdAt">
+        </div>
+
         <div class="auth-input">
           <label for="base64">Image</label>
           <input type="file" base64 name="base64" id="base64" ng-model="blogsNew.blog.base64">
