--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -31,6 +31,11 @@
           <input type="text" name="link" id="link" ng-model="projectsNew.project.link">
         </div>
 
+        <div>
+          <label for="createdAt">Date added</label>
+          <input type="date" id="createdAt" name="createdAt" ng-model="projectsNew.project.createdAt">
+        </div>
+
           <button>Create Project</button>
       </form>
     </div>
