--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -20,6 +20,10 @@
             <zero-md text="{{projectsShow.project.description}}">
               <div class="md-html markdown-div"></div>
             </zero-md>
+
+            <div class="date">
+              {{ projectsShow.project.createdAt }}
+            </div>
           </div>
         </div>
       </div>
