--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -5,7 +5,7 @@
 <div class="blog-box-one">
 
   <ul class="row">
-    <li ng-repeat="project in projectsIndex.all" class="col-md-6 col-lg-4 blog-box">
+    <li ng-repeat="project in projectsIndex.all | orderBy:'$index':true" class="col-md-6 col-lg-4 blog-box">
       <div class="blog">
         <h2>{{ project.name }}</h2>
         <div class="blog-img">
