--- a/src/js/views/blogs/new.html
+++ b/src/js/views/blogs/new.html
@@ -1,4 +1,7 @@
 <div class="box">
+
+
+
   <div class="box-mid">
     <div class="box-sm">
 
@@ -35,3 +38,9 @@
 
   <div class="extra-height"></div>
 </div>
+{{ blogsNew.createdBy }}
+<h1>something</h1>
+{{ blogsNew }}
+
+
+<br>
