--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,10 @@ main {
   margin: 0px, 200px, 0, 200px;
   text-align: center;
   display: block;
+  z-index: 0;
+  height: 100vh;
+  background-image: url("http://demo.lyrathemes.com/kale-pro/wp-content/uploads/sites/4/2016/06/bg.png");
+  background-repeat: repeat-x;
 }
 
 //////////////////    BLOGS INDEX  //////////////////////
@@ -30,6 +34,8 @@ ul {
     text-align: center;
     display: inline-block;
     float: none;
+    background-color: white;
+
     .blog {
       width: 100%;
       height: 450px;
